--- a/app/src/main/res/layout/activity_placemark.xml
+++ b/app/src/main/res/layout/activity_placemark.xml
@@ -102,6 +102,19 @@
             android:textColor="@color/colorPrimary"
             android:textSize="16sp" />
 
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:background="@color/colorAccent"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
+            android:stateListAnimator="@null"
+            android:text="@string/button_addPlacemark"
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp"/>
+
         <ImageView
             android:id="@+id/placemarkImage"
             android:layout_width="match_parent"
