--- a/app/src/main/res/menu/menu_placemark.xml
+++ b/app/src/main/res/menu/menu_placemark.xml
@@ -6,4 +6,10 @@
     android:id="@+id/item_cancel"
     android:title="@string/menu_cancelPlacemark"
     app:showAsAction="always"/>
+
+  <item
+    android:visible="false"
+    android:id="@+id/item_delete"
+    android:title="@string/menu_cancelPlacemark"
+    app:showAsAction="always"/>
 </menu>
