--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <item
-    android:id="@+id/item_add"
-    android:icon="@android:drawable/ic_menu_add"
-    android:title="@string/menu_addPlacemark"
-    app:showAsAction="always" />
+      android:id="@+id/item_add"
+      android:icon="@android:drawable/ic_menu_add"
+      android:title="@string/menu_addPlacemark"
+      app:showAsAction="always"/>
 
-  <tem
+  <item
       android:id="@+id/item_map"
       android:icon="@android:drawable/ic_menu_mapmode"
       android:title="@string/menu_addPlacemark"
